--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build": "cd server && npm run build",
     "seed": "cd server && npm run seed",
     "render-build": "npm install && npm run build",
-    "test": "cypress open"
+    "cypress": "npx cypress open",
+    "test": "npx cypress run --browser electron --headless",
+    "test-gui": "npx cypress open --detached"
   },
   "keywords": [],
   "author": "",
